# ObExit

./: AUTHORS  CMakeLists.txt  ChangeLog  README  THANKS  TODO
data/: CMakeLists.txt  obexit.1  obexit.conf  obexit.desktop
pixmaps/: CMakeLists.txt
pkg/: obexit-0.4-i486-1flx.txz
po/: CMakeLists.txt  POTFILES.in  de.po  obexit.pot
src/: obexit.c
