CMAKE_MINIMUM_REQUIRED (VERSION 2.4 FATAL_ERROR)
IF (COMMAND CMAKE_POLICY)	
	CMAKE_POLICY(SET CMP0005 OLD)
ENDIF (COMMAND CMAKE_POLICY)	
SET (PROJECT "obexit")
SET (AUTHOR "Manfred Mueller" INTERNAL "Author")
SET (VERSION "0.4")


INCLUDE (FindPkgConfig)

find_package(X11 REQUIRED)
include_directories(${X11_INCLUDE_DIR})

IF (NOT PKG_CONFIG_FOUND)
	MESSAGE (FATAL_ERROR "pkg-config not found...")
ENDIF (NOT PKG_CONFIG_FOUND)

pkg_check_modules (GLIB REQUIRED glib-2.0>=2.20)
IF (NOT GLIB_FOUND)
	MESSAGE(FATAL_ERROR "You don't seem to have glib >= 2.20 development libraries installed...")
ENDIF (NOT GLIB_FOUND)

pkg_check_modules (GTK REQUIRED gtk+-2.0>=2.16)
IF (NOT GTK_FOUND)
	MESSAGE(FATAL_ERROR "You don't seem to have gtk >= 2.16 development libraries installed...")
ENDIF (NOT GTK_FOUND)

ADD_DEFINITIONS (-DVERSION=\\\"${VERSION}\\\")
ADD_DEFINITIONS (-DDATADIR=\\\"${CMAKE_INSTALL_PREFIX}/share\\\")
ADD_DEFINITIONS (-DBUILDTYPE=\\\"${CMAKE_BUILD_TYPE}\\\")

IF( NOT DEFINED SYSCONFDIR )
  SET( SYSCONFDIR /etc )
ENDIF( NOT DEFINED SYSCONFDIR )


IF (${CMAKE_BUILD_TYPE} MATCHES "Debug")
	SET (CMAKE_C_FLAGS "-Wall")
ELSE (${CMAKE_BUILD_TYPE} NOT MATCHES "Debug")
	SET (CMAKE_C_FLAGS "-O2")
ENDIF (${CMAKE_BUILD_TYPE} MATCHES "Debug")

INCLUDE_DIRECTORIES (. ${GTK_INCLUDE_DIRS})
LINK_DIRECTORIES (${GTK_LIBRARY_DIRS})
LINK_LIBRARIES (${GTK_LIBRARIES} ${X11_X11_LIB})
ADD_EXECUTABLE (obexit src/obexit.c)
ADD_DEPENDENCIES (obexit src/obexit.c)

INSTALL (TARGETS obexit RUNTIME DESTINATION bin)	
MESSAGE(STATUS "Binary ${PROJECT} will be installed in ${CMAKE_INSTALL_PREFIX}/bin")
INSTALL (FILES AUTHORS COPYING ChangeLog INSTALL NEWS README THANKS TODO DESTINATION share/doc/${PROJECT}-${VERSION})	

ADD_SUBDIRECTORY (data)
ADD_SUBDIRECTORY (po)
ADD_SUBDIRECTORY (pixmaps)

FILE (GLOB MO_FILES po/*.mo)

SET_DIRECTORY_PROPERTIES (PROPERTIES
	ADDITIONAL_MAKE_CLEAN_FILES "${MO_FILES};po/obexit.pot")
SET (EXECUTABLE_OUTPUT_PATH src)
