INSTALL (FILES ${PROJECT}.desktop DESTINATION "${CMAKE_INSTALL_PREFIX}/share/applications")
MESSAGE(STATUS "Manpages will be installed in ${CMAKE_INSTALL_PREFIX}/man/man1")
INSTALL( FILES ${PROJECT}.1 DESTINATION "${CMAKE_INSTALL_PREFIX}/man/man1" )
MESSAGE(STATUS "Config files will be installed in ${SYSCONFDIR}")
INSTALL( FILES ${PROJECT}.conf DESTINATION ${SYSCONFDIR} )
